feat:#440 배너 재사용 기반 스타일 도메인과 어드민 API 추가